--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -11,6 +11,7 @@
   "author": "karen c.",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.4"
   },
