--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build:ui": "rm -rf build && cd ../frontend/ && npm run build && cp -r build ../backend",
+    "deploy": "fly deploy",
+    "deploy:full": "npm run build:ui && npm run deploy",
+    "logs:prod": "fly logs",
+    "test": "jest --verbose"
   },
   "author": "Karen C.",
   "license": "MIT",
@@ -16,6 +20,10 @@
     "mongoose": "^7.2.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
-  }
+    "nodemon": "^2.0.22",
+    "jest": "^29.5.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
+}
 }
