--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
     "build:ui": "rm -rf build && cd ../frontend/ && npm run build && cp -r build ../backend",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
     "logs:prod": "fly logs",
-    "test": "jest --verbose"
+    "test": "cross-env NODE_ENV=test jest --verbose --runInBand"
   },
   "author": "Karen C.",
   "license": "MIT",
@@ -20,10 +21,13 @@
     "mongoose": "^7.2.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
-    "jest": "^29.5.0"
+    "supertest": "^6.3.3"
   },
   "jest": {
-    "testEnvironment": "node"
-}
+    "testEnvironment": "node",
+    "globalTeardown": "./tests/teardown.js"
+  }
 }
