--- a/part4/blog-list/package.json
+++ b/part4/blog-list/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^7.2.1"
+    "mongoose": "^7.2.1",
+    "mongoose-unique-validator": "^4.0.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
