--- a/part5/bloglist-backend/package.json
+++ b/part5/bloglist-backend/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "dev": " cross-env NODE_ENV=development nodemon index.js",
-        "test": "jest --runInBand"
+        "test": "jest --runInBand",
+        "start:test": "NODE_ENV=test nodemon index.js"
     },
     "author": "",
     "license": "ISC",
